feat(C,D): ajout financial accounts et get collectivity
