# src/main/java/mg/federation/federationapi/dto/MembershipFee.java
@@ -1,0 +1,59 @@
+package mg.federation.federationapi.dto;
+
+public class MembershipFee {
+
+    private String id;
+    private String eligibleFrom;
+    private String frequency;
+    private double amount;
+    private String label;
+    private String status;
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getEligibleFrom() {
+        return eligibleFrom;
+    }
+
+    public void setEligibleFrom(String eligibleFrom) {
+        this.eligibleFrom = eligibleFrom;
+    }
+
+    public String getFrequency() {
+        return frequency;
+    }
+
+    public void setFrequency(String frequency) {
+        this.frequency = frequency;
+    }
+
+    public double getAmount() {
+        return amount;
+    }
+
+    public void setAmount(double amount) {
+        this.amount = amount;
+    }
+
+    public String getLabel() {
+        return label;
+    }
+
+    public void setLabel(String label) {
+        this.label = label;
+    }
+
+    public String getStatus() {
+        return status;
+    }
+
+    public void setStatus(String status) {
+        this.status = status;
+    }
+}
